[package]
name = "msnmp"
description = "SNMP command line utility"
version = "0.1.1"
authors = ["David Dufresne <davedufresne@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/davedufresne/modern_snmp"
keywords = ["snmp", "snmpv3" ]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.7.3"
snmp_mp = "0.1.0"
snmp_usm = "0.2.1"
clap = { version = "4.5.60", features = ["derive", "help", "std", "usage"], default-features = false }
anyhow = "1.0.102"
