[package]
name = "msnmp"
description = "SNMP command line utility"
version = "0.1.1"
authors = ["David Dufresne <davedufresne@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/davedufresne/modern_snmp"
keywords = ["snmp", "snmpv3" ]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.10.0"
snmp_mp = {git = "https://github.com/james-iceb/modern_snmp.git", rev = "c22bef2727c7d67f561081cffb69b7c503c0a8f5"}
snmp_usm = {git = "https://github.com/james-iceb/modern_snmp.git", rev = "c22bef2727c7d67f561081cffb69b7c503c0a8f5"}
clap = { version = "4.5.60", features = ["derive", "help", "std", "usage"], default-features = false }
anyhow = "1.0.102"
