[package]
name = "snmp_usm"
description = "Implementation of the User-based Security Model (USM) for Simple Network Management Protocol (SNMP) version 3."
version = "0.2.1" # remember to update html_root_url
authors = ["David Dufresne <davedufresne@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/davedufresne/modern_snmp"
keywords = ["snmp", "snmpv3", "usm", "security"]
categories = ["network-programming"]

[dependencies]
aes = "0.8.4"
cbc = {git = "https://github.com/RustCrypto/block-modes", tag = "cbc-v0.1.2"}
cfb-mode = "0.8.2"
des = "0.8.1"
hmac = "0.8.1"
md-5 = "0.9.1"
sha-1 = "0.9.8"
yasna = "0.5.2"
